# file-manager-rs

./: .gitignore  Cargo.toml  README.md
crates/fm_cli/: Cargo.toml
crates/fm_cli/src/: main.rs
crates/fm_core/: Cargo.toml
crates/fm_core/src/: action.rs  effect.rs  event.rs  fs_ops.rs  lib.rs  reducer.rs  state.rs  types.rs
crates/fm_platform/: Cargo.toml
crates/fm_platform/src/: open.rs
crates/fm_tui/: Cargo.toml
crates/fm_tui/src/: input.rs  ui.rs
